<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OrderActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/customerNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/customer_name"
            android:textColor="#000000"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/userNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/customerNameText"
            android:textColor="#000000"
            android:textSize="19sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/goodsNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/customerNameText"
            android:text="@string/goods_name"
            android:textColor="#000000"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/goodsNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_below="@id/customerNameText"
            android:layout_toRightOf="@+id/goodsNameText"
            android:textColor="#000000"
            android:textSize="19sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/quantityText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/goodsNameText"
            android:text="@string/quantity"
            android:textColor="#000000"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/quantityTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_below="@id/goodsNameText"
            android:layout_toRightOf="@+id/quantityText"
            android:textColor="#000000"
            android:textSize="19sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/priceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/quantityText"
            android:text="@string/price"
            android:textColor="#000000"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/priceTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_below="@id/quantityText"
            android:layout_toRightOf="@+id/priceText"
            android:textColor="#000000"
            android:textSize="19sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/orderPriceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/priceText"
            android:text="@string/order_price"
            android:textColor="#000000"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/orderPriceTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_below="@id/priceText"
            android:layout_toRightOf="@+id/orderPriceText"
            android:textColor="#000000"
            android:textSize="19sp"
            android:textStyle="bold" />
        <Button
            android:layout_marginTop="20dp"
            android:text="SEND"
            android:onClick="submitOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/orderPriceText"/>

    </RelativeLayout>



</LinearLayout>